<resources>
    <string name="app_name">Załadunek</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Dalej</string>
    <string name="login">Login</string>
    <string name="sign_in">Zaloguj się</string>
    <string name="remember_me">Zapamiętaj mnie</string>

    <string name="password">Hasło</string>
    <string name="accept">Akceptuj</string>
    <string name="confirm">Potwierdzenie</string>
    <string name="current_order">Wybrane zlecenie</string>
    <string name="current_orders">Aktualne zlecenia</string>
    <string name="cancel">Anuluj</string>
    <string name="refresh">Odśwież</string>
    <string name="sign_out">Wyloguj się</string>
    <string name="permission_required">Wymagane uprawnienia</string>
    <string name="permission_description">Bacon ipsum dolor amet jerky tenderloin frankfurter short loin ham hock bresaola salami. Ground round jerky beef pork belly shank salami fatback andouille, rump short ribs jowl meatball turkey leberkas.</string>

    <string name="login_wrong_login_pattern">Login musi zawierać przynajmniej 5 znaków</string>
    <string name="login_wrong_password_pattern">Hasło musi zawierać przynajmniej 5 znaków</string>

    <string name="element_order">Zamówienie</string>
    <string name="element_location">Lokalizacja:</string>
    <string name="element_status">Status:</string>
    <string name="element_elements">Elementy:</string>
    <string name="order_are_operated">Wybrane zamówienie jest już przetwarzane</string>
    <string name="something_is_wrong">Coś poszło nie tak</string>

    <string name="lack_of_data">Brak danych</string>
    <string name="scan_qr_code">Zeskanuj kod QR</string>
    <string name="make_photo">Zrób zdjęcie</string>
    <string name="wrong_qr_code">Błędny kod</string>
    <string name="scanned_stopped">Nie zeskanowano kodu</string>
    <string name="success_save">Zapisywanie powiodło się</string>
    <string name="lack_of_internet">Brak połączenia z internetem</string>
</resources>