<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="mainViewModel"
            type="com.example.trucksload.viewmodels.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_constraint_layout"
        tools:context=".ui.login.LoginScreenFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_700">


        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/ic_groups"
            app:layout_constraintBottom_toTopOf="@+id/material_card_view"
            app:layout_constraintEnd_toEndOf="@+id/material_card_view"
            app:layout_constraintStart_toStartOf="@+id/material_card_view" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/material_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progress_bar"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="25dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/sign_in"
                    android:textColor="@color/black"
                    android:textSize="35sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login"
                    app:counterEnabled="true"
                    app:counterMaxLength="20">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_input_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="20" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:counterEnabled="true"
                    app:counterMaxLength="20">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_input_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLength="20" />

                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/remember_me"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_me"
                    android:textSize="15sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    android:text="@string/sign_in"
                    android:drawableEnd="@drawable/ic_arrow"
                    android:backgroundTint="@color/gray"
                    android:textSize="16sp" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>